compiler/kernc_cli/tests/soundness/reject/mutability/mut_address_of_array_element_through_shared_slice_rejected.kn
// source: mutable element address must not be synthesized through a read-only slice view
// stderr: cannot take mutable address `..&` of immutable memory
// stderr-not: LLVM IR Verification Failed

fn bump(value: &mut i32) void {
    value.* += 1;
}

fn main() i32 {
    let data = [3]i32.{ 1, 2, 3 };
    let view = data.&[0...3];
    bump(view.[1]..&);
    return 0;
}
